java: replace 'new Short' with 'Short.valueOf'
Change-Id: Ic0e3aca1c1459ab938e01f43c0212859d85075e8